k8s/kube-prom-stack/httproute-kube-prom-stack.yaml

# --- 1. Namespace (Sin cambios) ---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
# Ahora se vincula al listener "http" del Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs: 
  - name: gateway-principal
    namespace: nginx-gateway
    sectionName: http   # Va por http, el nginx proxy manager lo redirige a https.
  
  hostnames:
  - "monitoreo-avatares2.chicho.com.ar"
  
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: monitoring-prometheus-stack-grafana
      port: 80
