k8s/kube-prom-stack/ingress-kube-prom-stack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - monitoreo-avatares2.chicho.com.ar
    secretName: grafana-rke2-tls
  rules:
  - host: "monitoreo-avatares2.chicho.com.ar"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitoring-prometheus-stack-grafana
            port:
              number: 80
